card overflow fix

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -20,13 +20,14 @@
   flex-direction: column;
   margin-right: auto;
   margin-left: 1rem;
+  width: calc(100% - 9rem);
 }
 
 .card__text {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 12rem;
+  width: 20rem;
 }
 
 .card__text--primary {
@@ -44,8 +45,14 @@
   }
 }
 
-@media screen and (min-width: 611px) and (max-width: 1500px) {
+@media screen and (min-width: 611px) and (max-width: 1300px) {
   .card {
     width: calc(100% - 20px);
+  }
+}
+
+@media screen and (min-width: 1301px) and (max-width: 1500px) {
+  .card {
+    width: calc(100% - 30px);
   }
 }
